Add About and Favorite components, add browser router for index.js and modift app.js with routes

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -4,6 +4,7 @@ $color-success: #26de81;
 $color-warning: #e1644e;
 
 $font-text: 'Poppins', sans-serif;
+$semi-bold: 600;
 
 $radius: 5px;
 $base-size: 12px;
