--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -4,14 +4,8 @@
   padding: $base-size;
 }
 
-.title {
-  padding: ($base-size * 3) 0;
-  text-align: center;
-  font-size: ($base-size * 3);
-  text-transform: uppercase;
-}
-
 .subtitle {
+  margin-top: (- $base-size * 3);
   padding: ($base-size * 2) 0;
   text-align: center;
   font-size: ($base-size * 2);
