Add remove card function to card and if statement for Column/Card/List form to prevent adding empty Column/Card/List

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -13,11 +13,25 @@
 }
 
 .button {
-    transform: scale(1.5);
+    transform: scale(1.3);
     background: none;
     border: none;
 }
 
+.buttons {
+    display: flex;
+}
+
 .isActive {
-    color: gold;
+    color: $color-gold;
+}
+
+.activeButton {
+    transform: scale(1.3);
+    background: none;
+    border: none;
+}
+
+.activeButton:active {
+    color: $color-warning;
 }
