--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -2,6 +2,7 @@ $color-light: #fff;
 $color-dark: #2f3542;
 $color-success: #26de81;
 $color-warning: #e1644e;
+$color-gold: rgb(240, 206, 18);
 
 $font-text: 'Poppins', sans-serif;
 $semi-bold: 600;
