--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -13,7 +13,7 @@
   font-size: 24px;
   text-decoration: none;
 
-  span {
+  .navIconTask {
       color: $color-light;
       transform: translate(50%, 50%);
   }
